--- a/0.Basic/1.0.Tenwor_Basic.ipynb
+++ b/0.Basic/1.0.Tenwor_Basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "experienced-floating",
+   "id": "mental-huntington",
    "metadata": {},
    "source": [
     "# Tensor Basics\n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "mexican-honey",
+   "execution_count": 2,
+   "id": "postal-track",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'1.9.0'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "light-morning",
+   "id": "rational-nudist",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerous-personal",
+   "id": "considered-durham",
    "metadata": {},
    "source": [
     "<h2><a href='https://pytorch.org/docs/stable/tensors.html'>Tensor Datatypes</a></h2>\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functioning-bracelet",
+   "id": "specialized-johnston",
    "metadata": {},
    "source": [
     "# Tensor를 만드는 방법은 세개가 있는데,\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-cycle",
+   "id": "congressional-failing",
    "metadata": {},
    "source": [
     "# Class constructors\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "mobile-zimbabwe",
+   "id": "organic-breast",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "embedded-merchant",
+   "id": "foster-howard",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-savage",
+   "id": "simple-drama",
    "metadata": {},
    "source": [
     "# Creating tensor from scratch\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-grocery",
+   "id": "advisory-contemporary",
    "metadata": {},
    "source": [
     "# Tensors from ranges\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-purse",
+   "id": "deluxe-election",
    "metadata": {},
    "source": [
     "# Change type of Tensor\n",
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "loose-relation",
+   "id": "available-variation",
    "metadata": {},
    "outputs": [
     {
@@ -195,9 +195,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "comparative-foundation",
+   "metadata": {},
+   "source": [
+    "# Random Number\n",
+    "- torch.rand(shape) : sampling from uniform(0,1)\n",
+    "- torch.randn(shape) : sampling from N(0,1)\n",
+    "- torch.randint(low,hight,shape) : sampling int from low high"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "olympic-float",
+   "metadata": {},
+   "source": [
+    "# Random number with same size of tensor x\n",
+    "- torch.rand_like(tensor)\n",
+    "- torch.randn_likne(tensor)\n",
+    "- torch.randint_like(tensor, low, high)\n",
+    "- torch.zeros_like(tensor)\n",
+    "- torch.ones_like(tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "unauthorized-youth",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.7908, -0.7156,  1.5054,  0.9501,  0.0084],\n",
+       "        [-0.5193,  0.7784, -0.8772,  0.5499, -1.3463]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.zeros(2,5)\n",
+    "x2 = torch.randn_like(x)\n",
+    "x2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conceptual-reading",
+   "id": "passing-armenia",
    "metadata": {},
    "outputs": [],
    "source": []
